--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,3 +19,96 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+body{
+  background-color:white;
+}
+.container{
+  @apply  mx-auto
+  lg:px-16 px-4;
+
+}
+ .btn{
+  background-image: linear-gradient(120deg,#f58020,#eb525c);
+  border-radius: 5px;
+  color: #fff;
+  padding: 10px 15px;
+ }
+    
+
+
+
+
+
+@keyframes typing {
+  from {
+    width: 0;
+  }
+  to {
+    width: 60%;
+  }
+}
+
+@keyframes blink {
+  50% {
+    border-color: transparent;
+  }
+}
+
+.animate-typing {
+  overflow: hidden; /* Ensures text appears as it's typed */
+  border-right: 0.10em solid blue; /* Creates typing cursor */
+  white-space: nowrap;
+ 
+  animation: typing 1.6s steps(20, end) forwards, blink 0.7s infinite;
+ 
+  padding: 7px;
+  padding-left: 0px;
+  line-height: 25px;
+  display: inline-block;
+  
+}
+
+/* Add extra spacing after text so the cursor doesn't stop immediately */
+.animate-typing::after {
+  /* Invisible space */
+  display: inline-block;
+  width: 10px; /* Adjust to move the cursor further */
+}
+
+
+
+.btn1{
+  background-color: #222;
+  border: 2px solid #3a3a3a;
+  border-radius: 30px;
+  -webkit-border-radius: 30px;
+  color: var(--qempo-footer-color);
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 56px;
+  padding: 0 70px 0 20px;
+  text-align: left;
+  transition: all .35s;
+  width: 70%;
+}
+
+
+.btn11{
+
+  position: absolute;
+ 
+  background-color: #f58020;
+  height: 60px;
+  line-height: 42px;
+ border-radius: 30px;
+  right: 0;
+ position: relative;
+  text-align: center;
+  top: 0;
+  width: 60px;
+  z-index: 10;
+}
+
+.main{
+ 
+}
